fix spacing between book detail spans

--- a/assets/src/styles/cloner.scss
+++ b/assets/src/styles/cloner.scss
@@ -124,6 +124,10 @@
 
            .book-details {
               margin-top: .25rem;
+
+             .license:after, .h5p-count:after {
+               content: "\00a0|"
+             }
             }
 
             p {
